--- a/additional cleaned.ipynb
+++ b/additional cleaned.ipynb
@@ -202,7 +202,7 @@
     "# Remove rows with 'n/a' in any cell\n",
     "cleaned_df = cleaned_df.replace('n/a', pd.NA).dropna()\n",
     "\n",
-    "cleaned_df.to_csv('final_output.csv', index=False)\n"
+    "cleaned_df.to_csv('Resources/final_output.csv', index=False)\n"
    ]
   }
  ],
