--- a/HappinessReport.ipynb
+++ b/HappinessReport.ipynb
@@ -3620,6 +3620,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 28 countries in Europe that have a happiness score above 6.0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "len(R_Europe[R_Europe['ladder_score'] > 6])\n",
+    "print(\"There are {} countries in Europe that have a happiness score above 6.0 \".format(len(R_Europe[R_Europe['ladder_score'] > 6])))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -5069,44 +5087,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 123 entries, Finland to Afghanistan\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                   Non-Null Count  Dtype  \n",
-      "---  ------                   --------------  -----  \n",
-      " 0   region                   123 non-null    object \n",
-      " 1   ladder_score             123 non-null    float64\n",
-      " 2   logged_GPD_per_capita    123 non-null    float64\n",
-      " 3   social_support           123 non-null    float64\n",
-      " 4   healthy_life_expectancy  123 non-null    float64\n",
-      " 5   freedom_life_choices     123 non-null    float64\n",
-      " 6   generosity               123 non-null    float64\n",
-      " 7   perceptions_corruption   123 non-null    float64\n",
-      " 8   population_density       123 non-null    float64\n",
-      " 9   unemployment_rate        123 non-null    float64\n",
-      " 10  median_age               123 non-null    float64\n",
-      " 11  gini_coefficient         123 non-null    float64\n",
-      " 12  avg_temperature          123 non-null    float64\n",
-      " 13  lt_alcohol_per_capita    123 non-null    float64\n",
-      " 14  CODE                     123 non-null    object \n",
-      "dtypes: float64(13), object(2)\n",
-      "memory usage: 19.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -5291,7 +5271,9 @@
     "\n",
     "#### Happier countries tend to: be wealthier, have a lot of social support, healthy life expectancy, be more free, be less corrupt, older. \n",
     "\n",
-    "#### Also, all those finding can come as a result of being wealthy. "
+    "#### Also, all those finding can come as a result of being wealthy. \n",
+    "\n",
+    "#### Looking by the Regions, Europe has 28 countries that have a happiness score above 6.0, North America 3 countries, Australia and Oceania 2 countries, South America 4 countries, Middle East 3 countries, East Asia 3 countries. Central Asia 2, while Africa, Central America and Carrabians, South Asia don't have countries with a happiness score above 6.0."
    ]
   }
  ],
