--- a/HappinessReport.ipynb
+++ b/HappinessReport.ipynb
@@ -5022,7 +5022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -6190,34 +6190,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "!pip install -U kaleido\n",
     "import plotly.express as px \n",
     "import pandas as pd \n",
-    "#def plot_corr_heatmap_plotly(df, title=\"Correlation Matrix Heatmap\"): \n",
+    "\n",
     "numeric_df = df.select_dtypes(include=[float, int])\n",
     "corr_matrix = numeric_df.corr() \n",
     "fig = px.imshow(corr_matrix, text_auto=\".2f\",  labels=dict(x=\"Variables\", y=\"Variables\", color=\"Correlation\"), x=numeric_df.columns, y=numeric_df.columns, title=\"Correlation Matrix Heatmap for 2023\", color_continuous_scale='RdBu_r') \n",
     "fig.update_layout( autosize=False, width=1500, height = 800,  margin=dict(l=20, r=20, t=50, b=20) )\n",
     "fig.update_traces(textfont_size=8)\n",
-    "plt.savefig(\"image2.png\")\n",
-    "fig.show()\n",
-    "\n",
-    "#plt.savefig(\"image1.png\")\n",
-    "    \n",
-    "\n",
-    "#plot_corr_heatmap_plotly(df, \"Correlation Matrix Heatmap for 2023\")"
+    "#plt.savefig(\"image2.png\")\n",
+    "fig.show()\n"
    ]
   },
   {
