--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "4              29.2            11.72                   8.23  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "4.8315"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting into Train and Test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split (X, y, random_state=48)"
+    "X_train, X_test, y_train, y_test = train_test_split (X, y, test_size=0.2, random_state=48)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +436,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 0</th>\n",
-       "      <td>12</td>\n",
+       "      <td>10</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
        "      <td>0</td>\n",
-       "      <td>19</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -450,8 +450,8 @@
       ],
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
-       "Actual 0           12            0\n",
-       "Actual 1            0           19"
+       "Actual 0           10            0\n",
+       "Actual 1            0           15"
       ]
      },
      "metadata": {},
@@ -465,12 +465,12 @@
       "Classification Report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        12\n",
-      "           1       1.00      1.00      1.00        19\n",
+      "           0       1.00      1.00      1.00        10\n",
+      "           1       1.00      1.00      1.00        15\n",
       "\n",
-      "    accuracy                           1.00        31\n",
-      "   macro avg       1.00      1.00      1.00        31\n",
-      "weighted avg       1.00      1.00      1.00        31\n",
+      "    accuracy                           1.00        25\n",
+      "   macro avg       1.00      1.00      1.00        25\n",
+      "weighted avg       1.00      1.00      1.00        25\n",
       "\n"
      ]
     }
@@ -486,28 +486,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.3045204855186525, 'happiness'),\n",
-       " (0.13374190715318252, 'social_support'),\n",
-       " (0.13194098024213044, 'healthy_life_expectancy'),\n",
-       " (0.11187647043018363, 'median_age'),\n",
-       " (0.08714124128433752, 'logged_GPD_per_capita'),\n",
-       " (0.05109082894104355, 'freedom_life_choices'),\n",
-       " (0.04528899952828081, 'lt_alcohol_per_capita'),\n",
-       " (0.04263453608163819, 'avg_temperature'),\n",
-       " (0.028910141361883784, 'unemployment_rate'),\n",
-       " (0.024633690989328574, 'perceptions_corruption'),\n",
-       " (0.017320579271364118, 'generosity'),\n",
-       " (0.011109982509956231, 'population_density'),\n",
-       " (0.009790156688018246, 'gini_coefficient')]"
+       "[(0.3083971531942293, 'happiness'),\n",
+       " (0.14155221441455296, 'social_support'),\n",
+       " (0.12589896972536188, 'median_age'),\n",
+       " (0.10811693064264899, 'healthy_life_expectancy'),\n",
+       " (0.08461066347900709, 'logged_GPD_per_capita'),\n",
+       " (0.0626384714260217, 'lt_alcohol_per_capita'),\n",
+       " (0.044606483716810974, 'freedom_life_choices'),\n",
+       " (0.04022396029488715, 'avg_temperature'),\n",
+       " (0.025984125671867996, 'generosity'),\n",
+       " (0.0258226215463267, 'unemployment_rate'),\n",
+       " (0.015206828862094434, 'gini_coefficient'),\n",
+       " (0.010216549788255038, 'perceptions_corruption'),\n",
+       " (0.006725027237935729, 'population_density')]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
