Assignment: Correct X variable (take out independent column RF model and LR model)

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "4              29.2            11.72                   8.23  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "4.8315"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,17 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define features set\n",
-    "X = happiness_df.copy()"
+    "# Define features set & drop happiness column from X variable\n",
+    "X = happiness_df.copy()\n",
+    "X = happiness_df.drop(columns=['happiness'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +437,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 0</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -450,8 +451,8 @@
       ],
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
-       "Actual 0           10            0\n",
-       "Actual 1            0           15"
+       "Actual 0            8            2\n",
+       "Actual 1            3           12"
       ]
      },
      "metadata": {},
@@ -461,16 +462,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score : 1.0\n",
+      "Accuracy Score : 0.8\n",
       "Classification Report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        10\n",
-      "           1       1.00      1.00      1.00        15\n",
+      "           0       0.73      0.80      0.76        10\n",
+      "           1       0.86      0.80      0.83        15\n",
       "\n",
-      "    accuracy                           1.00        25\n",
-      "   macro avg       1.00      1.00      1.00        25\n",
-      "weighted avg       1.00      1.00      1.00        25\n",
+      "    accuracy                           0.80        25\n",
+      "   macro avg       0.79      0.80      0.79        25\n",
+      "weighted avg       0.81      0.80      0.80        25\n",
       "\n"
      ]
     }
@@ -486,28 +487,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.3083971531942293, 'happiness'),\n",
-       " (0.14155221441455296, 'social_support'),\n",
-       " (0.12589896972536188, 'median_age'),\n",
-       " (0.10811693064264899, 'healthy_life_expectancy'),\n",
-       " (0.08461066347900709, 'logged_GPD_per_capita'),\n",
-       " (0.0626384714260217, 'lt_alcohol_per_capita'),\n",
-       " (0.044606483716810974, 'freedom_life_choices'),\n",
-       " (0.04022396029488715, 'avg_temperature'),\n",
-       " (0.025984125671867996, 'generosity'),\n",
-       " (0.0258226215463267, 'unemployment_rate'),\n",
-       " (0.015206828862094434, 'gini_coefficient'),\n",
-       " (0.010216549788255038, 'perceptions_corruption'),\n",
-       " (0.006725027237935729, 'population_density')]"
+       "[(0.20433335452671744, 'social_support'),\n",
+       " (0.1820047550825159, 'healthy_life_expectancy'),\n",
+       " (0.10189607107343157, 'median_age'),\n",
+       " (0.09413283654194438, 'freedom_life_choices'),\n",
+       " (0.09040723823340853, 'logged_GPD_per_capita'),\n",
+       " (0.0763086301641807, 'avg_temperature'),\n",
+       " (0.07384111557505775, 'lt_alcohol_per_capita'),\n",
+       " (0.04106351305395115, 'perceptions_corruption'),\n",
+       " (0.03962065594936341, 'population_density'),\n",
+       " (0.03638758725680488, 'unemployment_rate'),\n",
+       " (0.0311710171426203, 'gini_coefficient'),\n",
+       " (0.028833225400003947, 'generosity')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
