--- a/Logistic model.ipynb
+++ b/Logistic model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create SQLite connection\n",
     "happiness_path = Path('Resources/HappinessIndexScore.sqlite')\n",
     "engine = create_engine(f'sqlite:///{happiness_path}')\n",
-    "conn = engine.connect()"
+    "conn = engine.connect()\n",
+    "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +210,7 @@
        "4              29.2            11.72                   8.23  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,12 +226,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CLASSIFICATION MODEL"
+    "## LOGISTIC REGRESSION MODEL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +240,7 @@
        "4.8315"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
        "Name: happiness, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
        "4            11.72                   8.23  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +921,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1022,7 @@
        "45            1       1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1044,7 @@
        "0.8709677419354839"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1066,7 @@
        "       [ 3, 18]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1105,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1.3250554021066367, 'social_support'),\n",
+       " (0.6536921962235471, 'median_age'),\n",
+       " (-0.6163119985675591, 'avg_temperature'),\n",
+       " (-0.4601930312790386, 'unemployment_rate'),\n",
+       " (0.28613899427013445, 'logged_GPD_per_capita'),\n",
+       " (-0.18211546397024958, 'generosity'),\n",
+       " (-0.1269678916919012, 'population_density'),\n",
+       " (-0.12633405966510808, 'perceptions_corruption'),\n",
+       " (0.09488463024883967, 'freedom_life_choices'),\n",
+       " (0.04458411859407358, 'healthy_life_expectancy'),\n",
+       " (0.031556682549600694, 'gini_coefficient'),\n",
+       " (-0.028831415368151148, 'lt_alcohol_per_capita')]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Classification feature importance\n",
+    "importances = zip(classifier.coef_[0], X.columns)\n",
+    "importances = sorted(importances, key=lambda x: abs(x[0]), reverse=True)\n",
+    "importances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1164,7 @@
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mSystemExit\u001b[0m                                Traceback (most recent call last)",
       "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
-      "Cell \u001b[0;32mIn[36], line 423\u001b[0m\n\u001b[1;32m    422\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 423\u001b[0m     \u001b[43mapp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdebug\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[38], line 435\u001b[0m\n\u001b[1;32m    434\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 435\u001b[0m     \u001b[43mapp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdebug\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.10/site-packages/dash/dash.py:2277\u001b[0m, in \u001b[0;36mDash.run_server\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2272\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"`run_server` is a deprecated alias of `run` and may be removed in a\u001b[39;00m\n\u001b[1;32m   2273\u001b[0m \u001b[38;5;124;03mfuture version. We recommend using `app.run` instead.\u001b[39;00m\n\u001b[1;32m   2274\u001b[0m \n\u001b[1;32m   2275\u001b[0m \u001b[38;5;124;03mSee `app.run` for usage information.\u001b[39;00m\n\u001b[1;32m   2276\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m-> 2277\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.10/site-packages/dash/dash.py:2168\u001b[0m, in \u001b[0;36mDash.run\u001b[0;34m(self, host, port, proxy, debug, jupyter_mode, jupyter_width, jupyter_height, jupyter_server_url, dev_tools_ui, dev_tools_props_check, dev_tools_serve_dev_bundles, dev_tools_hot_reload, dev_tools_hot_reload_interval, dev_tools_hot_reload_watch_interval, dev_tools_hot_reload_max_retry, dev_tools_silence_routes_logging, dev_tools_prune_errors, **flask_run_options)\u001b[0m\n\u001b[1;32m   2167\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m jupyter_dash\u001b[38;5;241m.\u001b[39mactive:\n\u001b[0;32m-> 2168\u001b[0m     \u001b[43mjupyter_dash\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_app\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2169\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2170\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjupyter_mode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2171\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwidth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjupyter_width\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2172\u001b[0m \u001b[43m        \u001b[49m\u001b[43mheight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjupyter_height\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2173\u001b[0m \u001b[43m        \u001b[49m\u001b[43mhost\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhost\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2174\u001b[0m \u001b[43m        \u001b[49m\u001b[43mport\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mport\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2175\u001b[0m \u001b[43m        \u001b[49m\u001b[43mserver_url\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjupyter_server_url\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2176\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2177\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
       "File \u001b[0;32m/opt/anaconda3/envs/dev/lib/python3.10/site-packages/dash/_jupyter.py:332\u001b[0m, in \u001b[0;36mJupyterDash.run_app\u001b[0;34m(self, app, mode, width, height, host, port, server_url)\u001b[0m\n\u001b[1;32m    330\u001b[0m err_q \u001b[38;5;241m=\u001b[39m queue\u001b[38;5;241m.\u001b[39mQueue()\n\u001b[0;32m--> 332\u001b[0m server \u001b[38;5;241m=\u001b[39m \u001b[43mmake_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhost\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mport\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mapp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mserver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mthreaded\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprocesses\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    333\u001b[0m logging\u001b[38;5;241m.\u001b[39mgetLogger(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwerkzeug\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39msetLevel(logging\u001b[38;5;241m.\u001b[39mERROR)\n",
@@ -1165,7 +1200,7 @@
     "app.layout = html.Div(\n",
     "    [\n",
     "        html.H1(\n",
-    "            'Predict happiness using our classification model',\n",
+    "            'Predict happiness using our Logistic Regression model',\n",
     "            style={\n",
     "                'font-size': '35px',\n",
     "                'font-family': 'Arial, sans-serif',\n",
@@ -1187,6 +1222,7 @@
     "                        dcc.Input(\n",
     "                            id='input1',\n",
     "                            type='number',\n",
+    "                            value=251.389,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1211,6 +1247,7 @@
     "                        dcc.Input(\n",
     "                            id='input2',\n",
     "                            type='number',\n",
+    "                            value=0.341,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1235,6 +1272,7 @@
     "                        dcc.Input(\n",
     "                            id='input3',\n",
     "                            type='number',\n",
+    "                            value=51.53,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1259,6 +1297,7 @@
     "                        dcc.Input(\n",
     "                            id='input4',\n",
     "                            type='number',\n",
+    "                            value=0.382,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1283,6 +1322,7 @@
     "                        dcc.Input(\n",
     "                            id='input5',\n",
     "                            type='number',\n",
+    "                            value=-0.254,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1307,6 +1347,7 @@
     "                        dcc.Input(\n",
     "                            id='input6',\n",
     "                            type='number',\n",
+    "                            value=0.146,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1340,6 +1381,7 @@
     "                        dcc.Input(\n",
     "                            id='input7',\n",
     "                            type='number',\n",
+    "                            value=2.08,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1364,6 +1406,7 @@
     "                        dcc.Input(\n",
     "                            id='input8',\n",
     "                            type='number',\n",
+    "                            value=0.24,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1388,6 +1431,7 @@
     "                        dcc.Input(\n",
     "                            id='input9',\n",
     "                            type='number',\n",
+    "                            value=15.1,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1412,6 +1456,7 @@
     "                        dcc.Input(\n",
     "                            id='input10',\n",
     "                            type='number',\n",
+    "                            value=0.232,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1436,6 +1481,7 @@
     "                        dcc.Input(\n",
     "                            id='input11',\n",
     "                            type='number',\n",
+    "                            value=-4.22,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
@@ -1460,6 +1506,7 @@
     "                        dcc.Input(\n",
     "                            id='input12',\n",
     "                            type='number',\n",
+    "                            value=0,\n",
     "                            step=0.001,\n",
     "                            style={\n",
     "                                'font-family': 'Arial, sans-serif',\n",
