--- a/LinearRegression folder/logged_GPD_per_capita.ipynb
+++ b/LinearRegression folder/logged_GPD_per_capita.ipynb
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "#Read salary data\n",
+    "#Read  data\n",
     "file_path = Path(\"../Resources/final_output.csv\")\n",
     "df_gdp = pd.read_csv(file_path)\n",
     "\n",
@@ -294,7 +294,7 @@
     }
    ],
    "source": [
-    "# Create a scatter plot of years_experience versus the salary information\n",
+    "# Create a scatter plot of gdp versus the ladder score information\n",
     "gdp_plot = df_gdp.hvplot.scatter(\n",
     "    x=\"logged_GPD_per_capita\",\n",
     "    y=\"ladder_score\",\n",
@@ -447,10 +447,9 @@
     }
    ],
    "source": [
-    "# Display the formula to predict the salary for a person with 7 years of experience\n",
+    "\n",
     "print(f\"Model's formula: y = {model.intercept_} + {model.coef_[0]}\")\n",
     "\n",
-    "# Predict the salary for a person with 7 years of experience\n",
     "y_7 = model.intercept_ + model.coef_[0] \n",
     "\n",
     "# Display the prediction\n",
@@ -657,7 +656,7 @@
     "# Create a copy of the original data\n",
     "df_happiness_predicted = df_gdp.copy()\n",
     "\n",
-    "# Add a column with the predicted salary values\n",
+    "# Add a column with the predicted ladder score values\n",
     "df_happiness_predicted[\"ladder_score_predicted\"] = predicted_y_values\n",
     "\n",
     "# Display sample data\n",
@@ -763,7 +762,7 @@
     }
    ],
    "source": [
-    "# Create a line plot of years_experience versus the predicted salary values\n",
+    "# Create a line plot of gdp versus the predicted ladder score values\n",
     "best_fit_line = df_happiness_predicted.hvplot.line(\n",
     "    x = \"logged_GPD_per_capita\",\n",
     "    y = \"ladder_score_predicted\",\n",
