--- a/LinearRegression folder/median_age.ipynb
+++ b/LinearRegression folder/median_age.ipynb
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "#Read salary data\n",
+    "#Read  data\n",
     "file_path = Path(\"../Resources/final_output.csv\")\n",
     "df_age = pd.read_csv(file_path)\n",
     "\n",
@@ -294,7 +294,7 @@
     }
    ],
    "source": [
-    "# Create a scatter plot of years_experience versus the salary information\n",
+    "# Create a scatter plot of median age versus the ladder score \n",
     "age_plot = df_age.hvplot.scatter(\n",
     "    x=\"median_age\",\n",
     "    y=\"ladder_score\",\n",
@@ -655,7 +655,7 @@
     "# Create a copy of the original data\n",
     "df_happiness_predicted = df_age.copy()\n",
     "\n",
-    "# Add a column with the predicted salary values\n",
+    "# Add a column with the predicted ladder score values\n",
     "df_happiness_predicted[\"ladder_score_predicted\"] = predicted_y_values\n",
     "\n",
     "# Display sample data\n",
@@ -761,7 +761,7 @@
     }
    ],
    "source": [
-    "# Create a line plot of years_experience versus the predicted salary values\n",
+    "# Create a line plot of median age versus the predicted ladder score values\n",
     "best_fit_line = df_happiness_predicted.hvplot.line(\n",
     "    x = \"median_age\",\n",
     "    y = \"Ladder_score_predicted\",\n",
