--- a/LinearRegression folder/perceptions_corruption.ipynb
+++ b/LinearRegression folder/perceptions_corruption.ipynb
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "#Read salary data\n",
+    "#Read  data\n",
     "file_path = Path(\"../Resources/final_output.csv\")\n",
     "df_perceptions_corruption = pd.read_csv(file_path)\n",
     "\n",
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "# Create a scatter plot of years_experience versus the salary information\n",
+    "# Create a scatter plot of perceptions of corruption versus the ladder score information\n",
     "perceptions_corruption_plot = df_perceptions_corruption.hvplot.scatter(\n",
     "    x=\"perceptions_corruption\",\n",
     "    y=\"ladder_score\",\n",
@@ -588,10 +588,9 @@
     }
    ],
    "source": [
-    "# Display the formula to predict the salary for a person with 7 years of experience\n",
+    "\n",
     "print(f\"Model's formula: y = {model.intercept_} + {model.coef_[0]} \")\n",
     "\n",
-    "# Predict the salary for a person with 7 years of experience\n",
     "y_7 = model.intercept_ + model.coef_[0] \n",
     "\n",
     "# Display the prediction\n",
@@ -798,7 +797,7 @@
     "# Create a copy of the original data\n",
     "df_perceptions_corruption_predcited = df_perceptions_corruption.copy()\n",
     "\n",
-    "# Add a column with the predicted salary values\n",
+    "# Add a column with the predicted ladder score  values\n",
     "df_perceptions_corruption_predcited[\"ladder score predicted\"] = predicted_y_values\n",
     "\n",
     "# Display sample data\n",
