--- a/LinearRegression folder/unemployment.ipynb
+++ b/LinearRegression folder/unemployment.ipynb
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "#Read salary data\n",
+    "#Read data\n",
     "file_path = Path(\"../Resources/final_output.csv\")\n",
     "df_unemployment = pd.read_csv(file_path)\n",
     "\n",
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "# Create a scatter plot of years_experience versus the salary information\n",
+    "# Create a scatter plot of unemployment versus the ladder score information\n",
     "unemployment_plot = df_unemployment.hvplot.scatter(\n",
     "    x=\"unemployment_rate\",\n",
     "    y=\"ladder_score\",\n",
@@ -779,7 +779,7 @@
     "# Create a copy of the original data\n",
     "df_unemployment_predicted = df_unemployment.copy()\n",
     "\n",
-    "# Add a column with the predicted salary values\n",
+    "# Add a column with the predicted ladder score values\n",
     "df_unemployment_predicted[\"ladder_score_predicted\"] = predicted_y_values\n",
     "\n",
     "# Display sample data\n",
@@ -885,7 +885,7 @@
     }
    ],
    "source": [
-    "# Create a line plot of years_experience versus the predicted salary values\n",
+    "# Create a line plot of unemployment versus the predicted ladder score values\n",
     "best_fit_line = df_unemployment_predicted.hvplot.line(\n",
     "    x = \"unemployment_rate\",\n",
     "    y = \"ladder_score_predicted\",\n",
