updated files with improved comments

--- a/LinearRegression folder/freedom_life_choice.ipynb
+++ b/LinearRegression folder/freedom_life_choice.ipynb
@@ -669,7 +669,7 @@
     "# Create a copy of the original data\n",
     "df_freedom_predicted = df_freedom.copy()\n",
     "\n",
-    "# Add a column with the predicted salary values\n",
+    "# Add a column with the predicted ladder score values\n",
     "df_freedom_predicted[\"ladder_score_predicted\"] = predicted_y_values\n",
     "\n",
     "# Display sample data\n",
