--- a/LinearRegression folder/perceptions_corruption.ipynb
+++ b/LinearRegression folder/perceptions_corruption.ipynb
@@ -903,7 +903,7 @@
     }
    ],
    "source": [
-    "# Create a line plot of years_experience versus the predicted salary values\n",
+    "# Create a line plot of perceptions corruptions versus the predicted ladder score values\n",
     "best_fit_line = df_perceptions_corruption_predcited.hvplot.line(\n",
     "    x = \"perceptions_corruption\",\n",
     "    y = \"Ladder score predicted\",\n",
