--- a/LinearRegression folder/population_density.ipynb
+++ b/LinearRegression folder/population_density.ipynb
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "#Read salary data\n",
+    "#Read  data\n",
     "file_path = Path(\"../Resources/final_output.csv\")\n",
     "df_population = pd.read_csv(file_path)\n",
     "\n",
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "# Create a scatter plot of years_experience versus the salary information\n",
+    "# Create a scatter plot of population density versus the ladder score information\n",
     "population_plot = df_population.hvplot.scatter(\n",
     "    x=\"population_density\",\n",
     "    y=\"ladder_score\",\n",
@@ -779,7 +779,7 @@
     "# Create a copy of the original data\n",
     "df_happiness_predicted = df_population.copy()\n",
     "\n",
-    "# Add a column with the predicted salary values\n",
+    "# Add a column with the ladder score  values\n",
     "df_happiness_predicted[\"ladder_score_predicted\"] = predicted_y_values\n",
     "\n",
     "# Display sample data\n",
@@ -885,7 +885,7 @@
     }
    ],
    "source": [
-    "# Create a line plot of years_experience versus the predicted salary values\n",
+    "# Create a line plot of population density versus the predicted ladder score values\n",
     "best_fit_line = df_happiness_predicted.hvplot.line(\n",
     "    x = \"population_density\",\n",
     "    y = \"ladder_score_predicted\",\n",
