--- a/additional cleaned.ipynb
+++ b/additional cleaned.ipynb
@@ -606,9 +606,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev (ipykernel)",
+   "display_name": "dev",
    "language": "python",
-   "name": "dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
