--- a/Logistic Regression Model/Logistic model low.ipynb
+++ b/Logistic Regression Model/Logistic model low.ipynb
@@ -36,10 +36,8 @@
    "outputs": [],
    "source": [
     "# Create SQLite connection\n",
-    "happiness_path = Path('Resources/HappinessIndexScore.sqlite')\n",
-    "engine = create_engine(f'sqlite:///{happiness_path}')\n",
-    "conn = engine.connect()\n",
-    "conn.close()"
+    "happiness_path = Path('../Resources/HappinessIndexScore.sqlite')\n",
+    "engine = create_engine(f'sqlite:///{happiness_path}')"
    ]
   },
   {
