--- a/Logistic Regression Model/Logistic model mid point.ipynb
+++ b/Logistic Regression Model/Logistic model mid point.ipynb
@@ -36,10 +36,8 @@
    "outputs": [],
    "source": [
     "# Create SQLite connection\n",
-    "happiness_path = Path('Resources/HappinessIndexScore.sqlite')\n",
-    "engine = create_engine(f'sqlite:///{happiness_path}')\n",
-    "conn = engine.connect()\n",
-    "conn.close()"
+    "happiness_path = Path('../Resources/HappinessIndexScore.sqlite')\n",
+    "engine = create_engine(f'sqlite:///{happiness_path}')"
    ]
   },
   {
@@ -1157,7 +1155,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x153c56380>"
+       "<IPython.lib.display.IFrame at 0x14fb4da80>"
       ]
      },
      "metadata": {},
